--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
-nav {
+nav ul {
+  list-style: none;
+  text-transform: uppercase;
+  padding: 5px;
+}
+a {
   text-decoration: none;
+}
+.home {
+  background-color: tan;
 }
