--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,29 @@
-body, h1, h2, p, ul, li, ol {
+body, #logo, h1, h2, p, ul, li, ol {
   margin: 0;
   padding: 0;
+  font: Helvetica;
   }
   * {
     box-sizing: border-box;
   }
   body {
-    font: Helvetica;
+    scroll-behavior: smooth;
+  }
+  h1, h2, p {
+    display: flex;
+    justify-content: center;
+}
+    h1 {
+    font-size: 3em;
+  }
+  h2 {
+    font-size: 2em;
+  }
+  p {
+    font-size: 1.5em;
+  }
+  #logo, h1, h2, nav li, p {
+    color: white;
   }
   nav {
   float: right;
@@ -21,12 +38,24 @@ nav li:last-child {
   border: 1px solid black;
   border-radius: 20px;
   padding: 10px;
-
 }
 a {
   text-decoration: none;
 }
-#home {
+#logo {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+#home, #shapes, #healthy, #transform, #satisfaction {
+    height: 100vh;
+    justify-content: center;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  }
+  #home {
   background-color: tan;
   height: 100vh;
 }
@@ -34,20 +63,15 @@ a {
   padding: 30px;
   overflow: auto;
 }
-#home div {
-  padding-top: 200px;
-  text-align: center;
-}
 #home header p {
   max-width: 50%;
   float: left;
 }
 #shapes {
   background: url(/assets/images/potato/2/blur.png);
-
 }
 #healthy {
-  background: url(/assets/images/potato/3/bg.jpg)
+  background: url(/assets/images/potato/3/bg.jpg);
 }
 #transform {
   background: url(/assets/images/potato/4/bg.jpg);
