--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -12,19 +12,22 @@ body {
 hgroup {
     display: flex;
     justify-content: center;
+    margin: 0;
 }
 h1 {
   flex-grow: 1;
-  display: block;
+  display: center;
   width: 100%;
   font-size: 3em;
+  margin: auto;
 }
 h2 {
   flex-grow: 1;
-    display: block;
+    display: center;
     width: 100%;
     font-size: 2em;
     font-weight: lighter;
+    margin: auto;
 }
 blockquote {
   font-size: 1.25em;
@@ -83,7 +86,12 @@ header {
 #home h1, #home h2, #logo, nav li {
   color: white;
 }
-
+#home .figure  {
+  max-width: 40em;
+}
+#home img {
+  max-width: 40em;
+}
 #shapes {
   background: url(/assets/images/potato/2/blur.png);
   background-size: cover;
