--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -1,4 +1,4 @@
-* html, body, hgroup, h1, h2, h3, ul, li, nav li, p, blockquote, footer {
+* html, body, hgroup, h1, h2, h3, ul, li, nav li, p, blockquote, small, footer {
   font: Helvetica;
   font-family: sans-serif;
   box-sizing: border-box;
@@ -75,18 +75,18 @@ h3 {
 }
 #transwrapper {
   display: flex;
-  justify-content: space-between;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding-top: 40em;
   margin: 0;
-  height: 45vh;
+  height: 20vh;
+  width: 40vw;
 }
 #transwrapper #halftater,
               #slider,
-              #chips,
-              #mash,
-              #fried {
-                margin: auto;
-                max-width: 5em;
-                height: inherit;
+              #chips {
+              flex: auto;
+              align-content: center;
               }
 /*style navigation*/
   nav li {
@@ -164,14 +164,15 @@ header {
 }
 .container {
   display: flex;
+  flex-flow: column wrap;
   justify-content: space-around;
   margin: 0;
 }
-#lite, #team, #pro {
-  flex: 1;
-  align-items: center;
-  margin: auto;
+ul #lite, #team, #pro {
+                      flex: 1;
+                      align-items: center;
+                      margin: auto;
 }
 #order li {
-  font-size: .75em;
+  font-size: 1.5em;
 }
